--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"db:start": "docker compose up",
-		"db:push": "drizzle-kit push",
-		"db:migrate": "drizzle-kit migrate",
+		"db:generate": "drizzle-kit generate:pg",
+		"db:migrate": "ts-node-esm -r dotenv/config src/lib/db/migrate.ts",
+		"db:push": "drizzle-kit push:pg",
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
@@ -24,30 +24,38 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^20",
-		"drizzle-kit": "^0.30.2",
+		"@types/pg": "^8.15.4",
+		"autoprefixer": "^10.4.21",
+		"dotenv": "^17.0.1",
+		"dotenv-cli": "^8.0.0",
+		"drizzle-kit": "^0.31.4",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"ts-node": "^10.9.2",
+		"tsx": "^4.20.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@node-rs/argon2": "^2.0.2",
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"drizzle-orm": "^0.40.0",
-		"postgres": "^3.4.5"
+		"@auth/drizzle-adapter": "^1.10.0",
+		"@auth/sveltekit": "^1.10.0",
+		"drizzle-orm": "^0.44.3",
+		"pg": "^8.16.3",
+		"postgres": "^3.4.7"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
