--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"db:generate": "drizzle-kit generate:pg",
-		"db:migrate": "ts-node-esm -r dotenv/config src/lib/db/migrate.ts",
-		"db:push": "drizzle-kit push:pg",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "tsx src/lib/db/migrate.ts",
+		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
